[package]
name = "to-sky"
version = "0.1.0"
edition = "2021"

[dependencies]
tungstenite = { version = "0.28.0", features = ["native-tls"] }
sqlite = "0.37.0"
tiny_http = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
lru = "0.16.3"
serde_cbor = "0.11.2"
serde_json = "1.0.149"
serde_bytes = "0.11.19"
urlencoding = "2.1.3"
